--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -121,7 +121,16 @@
                             </div>
                         </div>
                     </div>
-                            
+                    
+                    <div class = "row">
+                        <div class="col-lg-3">
+                        </div>
+                        <div class="col-lg-5">
+                            <div>
+                                {{ tkeywords_form }}
+                            </div>
+                        </div>
+                    </div>      
                 </div>
             </div>
             <div class="panel panel-default">
