--- a/geonode/templates/metadata_form_js.html
+++ b/geonode/templates/metadata_form_js.html
@@ -51,7 +51,7 @@
     });
     
     $(document).ready(function() {
-        $('#mandatory').find(":input").each(function(){
+        $('#mandatory').find(":input:visible").not(".nomandatory").each(function(){
             $(this).change(function(e){
                 if(e.target.value.trim() === ''){
                     if(!$(e.target).hasClass("input-empty")){
