--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -29,15 +29,15 @@
 </style>
 
 <br />
-<ul class="nav nav-tabs">
-    <li class="active">    
-        <a data-toggle="tab" href="#mandatory">Mandatory</a>
+<ul id="md_tabs" class="nav nav-tabs">
+    <li id="first" class="active">    
+        <a data-toggle="tab" href="#mandatory">Let's start > </a>
     </li>
-    <li>
-        <a data-toggle="tab" href="#advanced">Advanced</a>
+    <li id="second">
+        <a data-toggle="tab" href="#advanced">Almost there... > </a>
     </li>
-    <li>
-        <a data-toggle="tab" href="#ownership">Ownership</a>
+    <li id="last">
+        <a data-toggle="tab" href="#ownership">Done!</a>
     </li>
 </ul>
 
@@ -45,25 +45,17 @@
 
     <div id="mandatory" class="tab-pane fade in active">
         <br />
-        <p>Mandatory Metadata for ISO19115</p>
         <div class="panel-group">
             <div class="panel panel-default">
                 <div class="panel-heading">Data info</div>
                 <div class="panel-body">
                     <div class="row">
-                        <div class="col-lg-3">
-                                <div>
-                                    <span><label for="{{ layer_form.title|id }}">{{ layer_form.title.label }}</label></span>
-                                    <p class="xxs-font-size">(Name by which the cited resource is known)</p>
-                                    {{ layer_form.title }}
-                                </div>
-                                <hr />
-                                <div>
-                                    <span><label for="{{ layer_form.abstract|id }}">{{ layer_form.abstract.label }}</label></span>
-                                    <p class="xxs-font-size">(Brief narrative summary of the content of the resource/s)</p>
-                                    {{ layer_form.abstract }}
-                                </div>
-                            
+                        <div class="col-lg-4">
+				            <div>
+				                <span><label for="{{ layer_form.title|id }}">{{ layer_form.title.label }}</label></span>
+				                <p class="xxs-font-size">(Name by which the cited resource is known)</p>
+				                {{ layer_form.title }}
+				            </div>
                         </div>
                         <div class="col-lg-3">
                             <div>
@@ -71,23 +63,49 @@
                                 <p class="xxs-font-size">(When a given event occurred on the resource)</p>
                                 {{ layer_form.date }}
                             </div>
-                            <hr />
+                        </div>
+                        <div class="col-lg-3">
                             <div>
                                 <span><label for="{{ layer_form.date_type|id }}">{{ layer_form.date_type.label }}</label></span>
                                 <p class="xxs-font-size">(Identification of when a given event occurred)</p>
                                 {{ layer_form.date_type }}
                             </div>
-                            <hr />
-                            <div>
-                                <span><label for="{{ layer_form.keywords|id }}">{{ layer_form.keywords.label }}</label></span>
-                                <p class="xxs-font-size">(A space or comma separated list of keywords)</p>
-                                {{ layer_form.keywords }}
-                            </div>
                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+				            <hr />
+				            <div>
+				                <span><label for="{{ layer_form.abstract|id }}">{{ layer_form.abstract.label }}</label></span>
+				                <p class="xxs-font-size">(Brief narrative summary of the content of the resource/s)</p>
+				                {{ layer_form.abstract }}
+				            </div>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="col-lg-3">
                             <div>
+                                <span><label for="{{ layer_form.thumbnail_url|id }}">{{ layer_form.thumbnail_url.label }}</label></span>
+                                <img src="{{ layer_form.thumbnail_url.value }}" />
+                                <div><a href="#">set preview</a></div>
+                            </div>
+                        </div>
+                        <div class="col" style="font-size:10px">
+                            <div>
                                 <span><label class="control-label required-field">{% trans "Category" %}</label></span>
-                                <fieldset id="category_form">
+								<fieldset id="category_form">
+								  {% autoescape off %}
+								  {% for choice in category_form.category_choice_field.field.choices %}
+								  <div class="radio col-md-6">
+									<input type="radio" name="category_choice_field" value="{{ choice.0 }}"
+									  {% ifequal category_form.initial choice.0 %} checked="checked" {% endifequal %}> 
+									  {{ choice.1 }}
+									</input>
+								  </div>
+								  {% endfor %}
+								  {% endautoescape %}
+								</fieldset>
+                                <!--<fieldset id="category_form">
                                   {% autoescape off %}
                                   <select name="category_choice_field">
                                       {% for choice in category_form.category_choice_field.field.choices %}
@@ -95,84 +113,94 @@
                                       {% endfor %}
                                   </select>
                                   {% endautoescape %}
-                                </fieldset>
-                            </div>
-                            <hr />
-                            <div>
-                                <span><label for="{{ layer_form.thumbnail_url|id }}">{{ layer_form.thumbnail_url.label }}</label></span>
-                                <img src="{{ layer_form.thumbnail_url.value }}" />
-                                <div><a href="#">set preview</a></div>
+                                </fieldset>-->
                             </div>
                         </div>
-                        <div class="col-lg-3">
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <hr />
                             <div>
-                                <span><label for="{{ layer_form.regions|id }}">{{ layer_form.regions.label }}</label></span>
-                                {{ layer_form.regions }}
+                                <span><label for="{{ layer_form.keywords|id }}">{{ layer_form.keywords.label }}</label></span>
+                                <p class="xxs-font-size">(A space or comma separated list of keywords)</p>
+                                {{ layer_form.keywords }}
                             </div>
                         </div>
                     </div>
                             
                 </div>
             </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">Metadata info</div>
-                    <div class="panel-body">
-                    <div class="row">
-                        <div class="col-lg-3">
-                            <div>
-                                <span><label for="{{ layer_form.language|id }}">{{ layer_form.language.label }}</label></span>
-                                <p class="xxs-font-size">(Language used within the dataset)</p>
-                                {{ layer_form.language }}
-                            </div>
-                            <hr />
-                            <div>
-                                <span><label for="{{ layer_form.restriction_code_type|id }}">{{ layer_form.restriction_code_type.label }}</label></span>
-                                <p class="xxs-font-size">(Limitation/s placed upon the access or use of data)</p>
-                                {{ layer_form.restriction_code_type }}
-                            </div>
-
-                        </div>
-                        <div class="col-lg-3">
-                            <div>
-                                <span><label for="{{ layer_form.constraints_other|id }}">{{ layer_form.constraints_other.label }}</label></span>
-                                <p class="xxs-font-size">(Other restrictions and legal prerequisites for accessing or use data and metadata)</p>
-                                {{ layer_form.constraints_other }}
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div>
-                                <span><label for="{{ layer_form.license|id }}">{{ layer_form.license.label }}</label></span>
-                                <p class="xxs-font-size">(License of the dataset)</p>
-                                {{ layer_form.license }}
-                            </div>
-                            <hr />
-                            <div>
-                                <span><label for="{{ layer_form.metadata_author|id }}">{{ layer_form.metadata_author.label }}</label></span>
-                                <p class="xxs-font-size">(Author of the metadata)</p>
-                                {{ layer_form.metadata_author }}
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div>
-                                <span><label for="{{ layer_form.data_quality_statement|id }}">{{ layer_form.data_quality_statement.label }}</label></span>
-                                <p class="xxs-font-size">(General explanation of the data producer's knowledge about the lineage)</p>
-                                {{ layer_form.data_quality_statement }}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
-    
+
+
     <div id="advanced" class="tab-pane fade">
         <br />
-        <p>Other, Optional, Metadata</p>
+        <p>Metadata Model ISO19115</p>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col">
+		        <div id="mdinfo" class="panel panel-default">
+		            <div class="panel-heading">Metadata info</div>
+		                <div class="panel-body">
+		                <div class="row">
+		                    <div class="col-lg-3">
+		                        <div>
+		                            <span><label for="{{ layer_form.language|id }}">{{ layer_form.language.label }}</label></span>
+		                            <p class="xxs-font-size">(Language used within the dataset)</p>
+		                            {{ layer_form.language }}
+		                        </div>
+		                        <hr />
+		                        <div>
+		                            <span><label for="{{ layer_form.restriction_code_type|id }}">{{ layer_form.restriction_code_type.label }}</label></span>
+		                            <p class="xxs-font-size">(Limitation/s placed upon the access or use of data)</p>
+		                            {{ layer_form.restriction_code_type }}
+		                        </div>
+
+		                    </div>
+		                    <div class="col-lg-3">
+		                        <div>
+		                            <span><label for="{{ layer_form.constraints_other|id }}">{{ layer_form.constraints_other.label }}</label></span>
+		                            <p class="xxs-font-size">(Other restrictions and legal prerequisites for accessing or use data and metadata)</p>
+		                            {{ layer_form.constraints_other }}
+		                        </div>
+		                    </div>
+		                    <div class="col-lg-3">
+		                        <div>
+		                            <span><label for="{{ layer_form.license|id }}">{{ layer_form.license.label }}</label></span>
+		                            <p class="xxs-font-size">(License of the dataset)</p>
+		                            {{ layer_form.license }}
+		                        </div>
+		                        <hr />
+		                        <div>
+		                            <span><label for="{{ layer_form.metadata_author|id }}">{{ layer_form.metadata_author.label }}</label></span>
+		                            <p class="xxs-font-size">(Author of the metadata)</p>
+		                            {{ layer_form.metadata_author }}
+		                        </div>
+		                    </div>
+		                    <div class="col-lg-3">
+		                        <div>
+		                            <span><label for="{{ layer_form.data_quality_statement|id }}">{{ layer_form.data_quality_statement.label }}</label></span>
+		                            <p class="xxs-font-size">(General explanation of the data producer's knowledge about the lineage)</p>
+		                            {{ layer_form.data_quality_statement }}
+		                        </div>
+		                    </div>
+		                </div>
+		                <div class="row">
+		                    <div class="col">
+		                        <div>
+		                            <span><label for="{{ layer_form.regions|id }}">{{ layer_form.regions.label }}</label></span>
+		                            {{ layer_form.regions }}
+		                        </div>
+                            </div>
+                        </div>
+		            </div>
+		        </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
                 <div class="panel panel-default">
                     <div class="panel-heading">Data Optional info</div>
-                    
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-6">
@@ -221,10 +249,43 @@
                             </div>
                         </div>
                     </div>
-                    
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div id="ownership" class="tab-pane fade">
+        <br />
+        <p>Other, Optional, Metadata</p>
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Responsible Parties</div>
+                    <div class="panel-body">
+                        <span><label for="{{ layer_form.poc|id }}">{{ layer_form.poc.label }}</label></span>
+                        {{ layer_form.poc }}
+                    </div>
                 </div>
             </div>
             <div class="col-lg-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Owner and Permissions</div>
+                    <div class="panel-body">
+                        <div>
+                            <span><label for="{{ layer_form.owner|id }}">{{ layer_form.owner.label }}</label></span>
+                            <p class="xxs-font-size">(Owner of the cited resource)</p>
+                            {{ layer_form.owner }}
+                        </div>
+                        <hr />
+                        <div>
+                            {% include "_permissions.html" %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
                 <div class="panel panel-default">
                     <div class="panel-heading">Dataset Attributes</div>
                     <div class="panel-body">
@@ -249,38 +310,6 @@
                                 {% endfor %}
                             </table>
                           </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    
-    <div id="ownership" class="tab-pane fade">
-        <br />
-        <p>Owner, Permissions and Responsible Parties</p>
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading">Responsible Parties</div>
-                    <div class="panel-body">
-                        <span><label for="{{ layer_form.poc|id }}">{{ layer_form.poc.label }}</label></span>
-                        {{ layer_form.poc }}
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading">Owner and Permissions</div>
-                    <div class="panel-body">
-                        <div>
-                            <span><label for="{{ layer_form.owner|id }}">{{ layer_form.owner.label }}</label></span>
-                            <p class="xxs-font-size">(Owner of the cited resource)</p>
-                            {{ layer_form.owner }}
-                        </div>
-                        <hr />
-                        <div>
-                            {% include "_permissions.html" %}
-                        </div>
                     </div>
                 </div>
             </div>
