--- a/geonode/templates/metadata_form_js.html
+++ b/geonode/templates/metadata_form_js.html
@@ -1,9 +1,7 @@
 {% load staticfiles %}
-{% if DEBUG_STATIC %}
 <script src="{% static "lib/js/bootstrap-datetimepicker.min.js" %}" type="text/javascript"></script>
-<script src="{% static "lib/js/bootstrap-treeview.min.js" %}" type="text/javascript"></script>
-<script src="{% static "lib/js/bootstrap-tokenfield.js" %}" type="text/javascript"></script>
-{% endif %}
+<!--<script src="{% static "lib/js/bootstrap-treeview.min.js" %}" type="text/javascript"></script>-->
+<script src="{% static "lib/js/bootstrap-tokenfield.min.js" %}" type="text/javascript"></script>
 <script type="text/javascript">
 {% autoescape off %}
     $(function() {
@@ -37,6 +35,40 @@
       }
     });
 
+		function getPrevTab(){
+            var activeTab = $("ul#md_tabs li.active");
+            if (activeTab && activeTab[0].id === 'second') {
+                var prevTab = $("ul#md_tabs li#first");
+                if (prevTab && prevTab.children()) {
+                	prevTab.children().trigger("click");
+ 				}
+            }
+
+            if (activeTab && activeTab[0].id === 'last') {
+                var prevTab = $("ul#md_tabs li#second");
+                if (prevTab && prevTab.children()) {
+                	prevTab.children().trigger("click");
+ 				}
+            }
+		};
+
+		function getNextTab(){
+            var activeTab = $("ul#md_tabs li.active");
+            if (activeTab && activeTab[0].id === 'first') {
+                var nextTab = $("ul#md_tabs li#second");
+                if (nextTab && nextTab.children()) {
+                	nextTab.children().trigger("click");
+ 				}
+            }
+
+            if (activeTab && activeTab[0].id === 'second') {
+                var nextTab = $("ul#md_tabs li#last");
+                if (nextTab && nextTab.children()) {
+                	nextTab.children().trigger("click");
+ 				}
+            }
+		};
+
     $(document).ready(function() {
         $('.has-external-popover').each(function(){
             var help_text = $(this).attr("data-content");
@@ -51,7 +83,7 @@
     });
     
     $(document).ready(function() {
-        $('#mandatory').find(":input").each(function(){
+        $('#mdinfo').find(":input").each(function(){
             $(this).change(function(e){
                 if(e.target.value.trim() === ''){
                     if(!$(e.target).hasClass("input-empty")){
@@ -64,7 +96,13 @@
                     $(e.target).parent().find(".mandatory-warning").remove();
                 }    
             }).change();
-        })
+        });
+
+        $('#btn_back_up').click(function(){getPrevTab()});
+        $('#btn_back_dwn').click(function(){getPrevTab()});
+
+        $('#btn_next_up').click(function(){getNextTab()});
+        $('#btn_next_dwn').click(function(){getNextTab()});
     });
 
     $('#id_resource-metadata_author').change(function(){
@@ -80,18 +118,8 @@
         $('.has-popover').popover({'trigger':'hover'});
 
         var params = typeof FILTER_TYPE == 'undefined' ? {} : {'type': FILTER_TYPE};
-        $('#id_resource-keywords').tokenfield({
-            /*
-            autocomplete: {
-                source: ['red','blue','green','yellow','violet','brown','purple','black','white'],
-                delay: 100
-            },
-            showAutocompleteOnFocus: true
-            */
-        })
-
         $.ajax('/h_keywords_api', {params: params}).success(function(data){
-            $('#treeview').treeview({
+            /*$('#treeview').treeview({
                 data: data,
                 levels: 1,
                 onNodeSelected: function($event, $data) {
@@ -108,7 +136,22 @@
                         $('#id_resource-keywords').tokenfield('createToken', $data.text);
                     }
                 }
-            });
+            });*/
+            
+            data = JSON.parse(data)
+            var kws = [];
+            for (kw in data) {
+                if (data[kw] && data[kw].text) {
+				    kws.push(data[kw].text);
+                }
+            }
+		    $('#id_resource-keywords').tokenfield({
+		        autocomplete: {
+		            source: kws,
+		            delay: 100
+		        },
+		        showAutocompleteOnFocus: true
+		    })
         });
     });
 {% endautoescape %}
