--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -26,6 +26,13 @@
         border-color: red;
         border-style: double;
     }
+
+	input[type="text"] {
+		width: 200px !important;
+		left: 0;
+		right: 0;
+	}
+
 </style>
 
 <br />
@@ -276,10 +283,28 @@
                             <p class="xxs-font-size">(Owner of the cited resource)</p>
                             {{ layer_form.owner }}
                         </div>
-                        <hr />
-                        <div>
-                            {% include "_permissions.html" %}
-                        </div>
+                       {% if GEONODE_SECURITY_ENABLED %}
+                        <!--<hr />
+                        <div class="modal-body" id="_permissions" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                            {# include "_permissions.html" #}
+	                    </div>
+						<div class="modal fade" id="_permissions_feedbacks" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+						  <div class="modal-dialog" role="document">
+							<div class="modal-content">
+							  <div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+								<h4 class="modal-title" id="exampleModalLabel">Message box</h4>
+							  </div>
+							  <div class="modal-body">
+								...
+							  </div>
+							  <div class="modal-footer">
+								<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+							  </div>
+							</div>
+						  </div>
+						</div>-->
+                       {% endif %}
                     </div>
                 </div>
             </div>
