--- a/geonode/layers/templates/layers/layer_geoext_map_mini.html
+++ b/geonode/layers/templates/layers/layer_geoext_map_mini.html
@@ -1,6 +1,6 @@
 {% include "geonode/ext_header.html" %}
 {% include "geonode/app_header.html" %}
-{% include "geonode/geo_header.html" %}
+{% include "geonode/geo_header_mini.html" %}
 <script type="text/javascript" src="{{ STATIC_URL}}geonode/js/utils/thumbnail.js"></script>
 <script type="text/javascript">
 {% autoescape off %}
@@ -34,10 +34,10 @@
                 {% else %}
                 printService: "",
                 {% endif %}
-                
+
                 portalConfig: {
                     renderTo: "preview_map",
-                    height: 600
+                    height: 250
                 },
 
                 listeners: {
@@ -71,7 +71,7 @@
                     },
                     "beforeunload": function() {
                         if (modified) {
-                            styleEditor.show();
+                            // styleEditor.show();
                             return false;
                         }
                     }
@@ -130,9 +130,9 @@
 
             for (var key in app.tools) {
                 var tool = app.tools[key];
-                if (tool.ptype == 'gxp_styler') {
-                    tool.rasterStyling = true;
-                };
+                // if (tool.ptype == 'gxp_styler') {
+                    tool.rasterStyling = false;
+                //};
             };
 
             // change style displayed in map
