--- a/geonode/layers/templates/layers/layer_metadata.html
+++ b/geonode/layers/templates/layers/layer_metadata.html
@@ -1,24 +1,35 @@
 {% extends "layers/layer_base.html" %}
 {% load i18n %}
 {% load bootstrap_tags %}
+{% load url from future %}
+{% load base_tags %}
+{% load guardian_tags %}
 {% load floppyforms %}
 
 {% block title %}{{ layer.typename }} — {{ block.super }}{% endblock %}
 
+
+{% block head %}
+  {% if preview == 'geoext' %}
+    {% include "layers/layer_geoext_map_mini.html" %}
+  {% elif preview == 'OL3' %}
+    {% include "layers/layer_ol3_map.html" %}
+  {% else %}
+    {% include "layers/layer_leaflet_map.html" %}
+  {% endif %}
+{{ block.super }}
+{% endblock %}
+
 {% block body_class %}data{% endblock %}
 
 {% block body_outer %}
-<div class="page-header">
-  <a href="{% url "layer_browse" %}" class="btn btn-primary pull-right">{% trans "Explore Layers" %}</a>
-  <h2 class="page-title">{% trans "Edit Metadata" %}</h2>
+<div class="container-fluid page-header">
+  <!--<a href="{% url "layer_browse" %}" class="btn btn-primary pull-right">{% trans "Explore Layers" %}</a>-->
+  <h2 class="page-title">{% trans "Edit Metadata" %}&nbsp;{% blocktrans with layer.typename as layer_title %}for {{ layer_title }}{% endblocktrans %}</h2>
 </div>
+
 <div class="row">
   <div class="col-md-12">
-    <p class="lead">
-      {% blocktrans with layer.typename as layer_title %}
-        Editing details for {{ layer_title }}
-      {% endblocktrans %}
-    </p>
     <form id="layer_metadata_update" class="form-horizontal" action="{% url "layer_metadata" layer.service_typename %}" method="POST">
       {% if layer.metadata_uploaded_preserve %}
         <p class="bg-warning">{% blocktrans %}Note: this layer's orginal metadata was populated and preserved by importing a metadata XML file.
@@ -59,15 +70,6 @@
           </ul>
         {% endif %}
 
-        {% if not layer.metadata_uploaded_preserve %}
-        <div class="form-actions">
-			  <input type="button" id="btn_back_up" class="btn btn-primary" value="{% trans "<< Back" %}"/>
-              <input type="submit" class="btn btn-primary" value="{% trans "Update" %}"/>
-              <input type="button" id="btn_next_up" class="btn btn-primary" value="{% trans "Next >>" %}"/>
-        </div>
-        {% endif %}
-
-
         {% csrf_token %}
         <div class="col-md-12 form-controls">
           {% form layer_form using "layouts/panels.html" %}
@@ -106,5 +108,11 @@
 {% if GEONODE_SECURITY_ENABLED %}
  {% include "_permissions_form_js.html" %}
 {% endif %}
+
+    <script type="text/javascript">
+      $('#set_thumbnail').click(function(){
+        createMapThumbnail();
+      });
+    </script>
 
 {% endblock %}
