--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -1,7 +1,6 @@
 {% load floppyforms %}
 {% load i18n %}
 
-
 <style>
     .xxs-font-size{
         font-size: 10px;    
@@ -33,6 +32,40 @@
 		right: 0;
 	}
 
+    .tab-pane{
+        height:650px;
+        overflow-y:scroll;
+    }
+    
+    .fancy-checkbox input[type="radio"],
+    .fancy-checkbox input[type="checkbox"],
+    .fancy-checkbox .checked {
+        display: none;
+    }
+     
+    .fancy-checkbox input[type="radio"]:checked ~ .checked,
+    .fancy-checkbox input[type="checkbox"]:checked ~ .checked {
+        display: inline-block;
+        color:red;
+    }
+     
+    .fancy-checkbox input[type="radio"]:checked ~ .unchecked,
+    .fancy-checkbox input[type="checkbox"]:checked ~ .unchecked {
+        display: none;
+    }
+    
+    .tokenfield,
+    #id_resource-title {
+        width: 75% !important;
+    }
+    
+    .leaflet-container { /* all maps */
+        height: 250px !important;
+    }
+    
+    .map-overlay {
+        display: none !important;
+    }
 </style>
 
 <br />
@@ -48,79 +81,78 @@
     </li>
 </ul>
 
+{% block body_outer %}
 <div class="tab-content">
 
     <div id="mandatory" class="tab-pane fade in active">
         <br />
         <div class="panel-group">
             <div class="panel panel-default">
-                <div class="panel-heading">Data info</div>
+                <!-- div class="panel-heading">Data info</div -->
                 <div class="panel-body">
                     <div class="row">
-                        <div class="col-lg-4">
-				            <div>
-				                <span><label for="{{ layer_form.title|id }}">{{ layer_form.title.label }}</label></span>
-				                <p class="xxs-font-size">(Name by which the cited resource is known)</p>
-				                {{ layer_form.title }}
-				            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div>
-                                <span><label for="{{ layer_form.date|id }}">{{ layer_form.date.label }}</label></span>
-                                <p class="xxs-font-size">(When a given event occurred on the resource)</p>
-                                {{ layer_form.date }}
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div>
-                                <span><label for="{{ layer_form.date_type|id }}">{{ layer_form.date_type.label }}</label></span>
-                                <p class="xxs-font-size">(Identification of when a given event occurred)</p>
-                                {{ layer_form.date_type }}
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
                         <div class="col">
-				            <hr />
-				            <div>
-				                <span><label for="{{ layer_form.abstract|id }}">{{ layer_form.abstract.label }}</label></span>
-				                <p class="xxs-font-size">(Brief narrative summary of the content of the resource/s)</p>
-				                {{ layer_form.abstract }}
-				            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-3">
-                            <div>
-                                <span><label for="{{ layer_form.thumbnail_url|id }}">{{ layer_form.thumbnail_url.label }}</label></span>
-                                <img src="{{ layer_form.thumbnail_url.value }}" />
-                                <div><a href="#">set preview</a></div>
+                            <div class="container-fluid">
+                                <div class="col-lg-8">
+                                    <span><label for="{{ layer_form.title|id }}">{{ layer_form.title.label }}</label></span>
+                                    <p class="xxs-font-size">(Name by which the cited resource is known)</p>
+                                    {{ layer_form.title }}
+                                </div>
+                                <div class="col-lg-3">
+                                    <span><label for="{{ layer_form.date|id }}">{{ layer_form.date.label }}</label></span>
+                                    <p class="xxs-font-size">(When a given event occurred on the resource)</p>
+                                    {{ layer_form.date }}
+                                </div>
+                                <div class="hidden">
+                                    <span><label for="{{ layer_form.date_type|id }}">{{ layer_form.date_type.label }}</label></span>
+                                    <p class="xxs-font-size">(Identification of when a given event occurred)</p>
+                                    {{ layer_form.date_type }}
+                                </div>
                             </div>
                         </div>
+                    </div>
+                    <hr/>
+                    <div class="row">
                         <div class="col" style="font-size:10px">
-                            <div>
-                                <span><label class="control-label required-field">{% trans "Category" %}</label></span>
+                            <div class="container-fluid">
+                                <div class="col-lg-3">
+                                    <div id="embedded_map" class="mrg-btm">
+                                      <div id="preview_map" style="height:250px;"></div>
+                                    </div>
+                                    <!-- span><label for="{{ layer_form.thumbnail_url|id }}">{{ layer_form.thumbnail_url.label }}</label></span>
+                                    <img src="{{ layer_form.thumbnail_url.value }}" / -->
+                                    <div><a class="btn btn-default btn-block btn-xs" href="#" id="set_thumbnail">{% trans "Set" %}</a></div>
+                                </div>
+                                <div class="col-lg-8">
+                                    <div>
+                                        <span><label for="{{ layer_form.abstract|id }}">{{ layer_form.abstract.label }}</label></span>
+                                        <p class="xxs-font-size">(Brief narrative summary of the content of the resource/s)</p>
+                                        {{ layer_form.abstract }}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr/>
+                    <div class="row">
+                        <div class="col" style="font-size:10px">
+                            <div class="container-fluid text-center">
+                                <!-- span><label class="control-label required-field">{% trans "Category" %}</label></span -->
 								<fieldset id="category_form">
 								  {% autoescape off %}
 								  {% for choice in category_form.category_choice_field.field.choices %}
-								  <div class="radio col-md-6">
-									<input type="radio" name="category_choice_field" value="{{ choice.0 }}"
-									  {% ifequal category_form.initial choice.0 %} checked="checked" {% endifequal %}> 
-									  {{ choice.1 }}
-									</input>
-								  </div>
+                                  {% if forloop.counter|divisibleby:6 %}<div class="row">{% endif %}
+                                      <div class="col-xs-2 col-sm-2">
+                                        <label class="fancy-checkbox">
+                                            <input type="radio" name="category_choice_field" value="{{ choice.0 }}"
+                                              {% ifequal category_form.initial choice.0 %} checked="checked" {% endifequal %} />
+                                            {{ choice.1 }}
+                                        </label>
+                                      </div>
+                                  {% if forloop.counter|divisibleby:6 %}</div>{% endif %}
 								  {% endfor %}
 								  {% endautoescape %}
 								</fieldset>
-                                <!--<fieldset id="category_form">
-                                  {% autoescape off %}
-                                  <select name="category_choice_field">
-                                      {% for choice in category_form.category_choice_field.field.choices %}
-                                          <option value="{{ choice.0 }}" {% ifequal category_form.initial choice.0 %} selected {% endifequal %}>{{ choice.1 }}</option>
-                                      {% endfor %}
-                                  </select>
-                                  {% endautoescape %}
-                                </fieldset>-->
                             </div>
                         </div>
                     </div>
@@ -341,3 +373,4 @@
         </div>
     </div>
 </div>
+{% endblock %}
