--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -66,6 +66,18 @@
     .map-overlay {
         display: none !important;
     }
+    
+    .fstControls {
+        width: 100% !important;
+    }
+    
+    .fstElement {
+        font-size: 0.8em !important;
+    }
+    
+    .fstResultItem {
+        font-size: 1.2em !important;
+    }
 </style>
 
 <br />
