--- a/geonode/templates/base.html
+++ b/geonode/templates/base.html
@@ -18,8 +18,9 @@
       {% endif %}
       <link href="{{ STATIC_URL }}lib/css/bootstrap-tokenfield.min.css?v={{ VERSION }}" rel="stylesheet"/>
       <link href="{{ STATIC_URL }}lib/css/tokenfield-typeahead.min.css?v={{ VERSION }}" rel="stylesheet"/>
-      <link href="{{ STATIC_URL }}lib/css/bootstrap-multiselect.css?v={{ VERSION }}" rel="stylesheet"/>
-      <link href="{{ STATIC_URL }}lib/css/jquery.tree-multiselect.min.css?v={{ VERSION }}" rel="stylesheet"/>
+      <!--<link href="{{ STATIC_URL }}lib/css/bootstrap-multiselect.css?v={{ VERSION }}" rel="stylesheet"/>-->
+      <!--<link href="{{ STATIC_URL }}lib/css/jquery.tree-multiselect.min.css?v={{ VERSION }}" rel="stylesheet"/>-->
+      <link href="{{ STATIC_URL }}lib/css/fastselect.min.css?v={{ VERSION }}" rel="stylesheet"/>
       <link href="{{ STATIC_URL }}geonode/css/ext-compatibility.css?v={{ VERSION }}" rel="stylesheet" />
       <link href="{{ STATIC_URL }}geonode/css/base.css?v={{ VERSION }}" rel="stylesheet" />
       <style type="text/css">[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide:not(.ng-hide-animate){display:none !important;}</style>
