- Improved md panels and html5 placeholders

--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -183,15 +183,12 @@
         </div>
     </div>
 
-
     <div id="advanced" class="tab-pane fade">
         <div class="panel-group">
-        <!--<div class="row">-->
-            <!--<div class="col">-->
-		        <div id="mdinfo" class="panel panel-default">
+		        <div class="panel panel-default">
 		            <!-- div class="panel-heading">Metadata info</div -->
 		            <div class="panel-body">
-		                <div class="row">
+		                <div class="row" id="mdinfo">
 		                    <div class="col-lg-3">
 		                        <div>
 		                            <span><label for="{{ layer_form.language|id }}">{{ layer_form.language.label }}</label></span>
@@ -241,15 +238,7 @@
 		                        </div>
                             </div>
                         </div>
-		            </div>
-		        </div>
-            <!--</div>-->
-        <!--</div>-->
-        <!--<div class="row">-->
-            <!--<div class="col">-->
-                <div class="panel panel-default">
-                    <!-- div class="panel-heading">Data Optional info</div -->
-                    <div class="panel-body">
+                        <hr/>
                         <div class="row">
                             <div class="col-xs-6 col-lg-4">
                                 <div>
@@ -293,7 +282,6 @@
                         </div>
                     </div>
                 </div>
-            <!--</div>-->
         </div>
     </div>
     
