--- a/geonode/templates/metadata_form_js.html
+++ b/geonode/templates/metadata_form_js.html
@@ -91,7 +91,7 @@
                 if(e.target.value.trim() === ''){
                     if(!$(e.target).hasClass("input-empty")){
                         $(e.target).addClass("input-empty");
-                        $(e.target).parent().append("<p class='xxs-font-size mandatory-warning'>&nbsp;&nbsp;&nbsp;<strong>* ISO19115 mandatory field</strong></p>");
+                        $(e.target).parent().append("<p class='xxs-font-size mandatory-warning'>&nbsp;&nbsp;&nbsp;<strong>* ISO mandatory field</strong></p>");
                     }
                 }
                 else{
