--- a/geonode/layers/templates/layers/layer_metadata.html
+++ b/geonode/layers/templates/layers/layer_metadata.html
@@ -28,8 +28,8 @@
   <h2 class="page-title">{% trans "Edit Metadata" %}&nbsp;{% blocktrans with layer.typename as layer_title %}for {{ layer_title }}{% endblocktrans %}</h2>
 </div>
 
-<div class="row">
-  <div class="col-md-12">
+<!--<div class="row">-->
+  <!--<div class="col-md-12">-->
     <form id="layer_metadata_update" class="form-horizontal" action="{% url "layer_metadata" layer.service_typename %}" method="POST">
       {% if layer.metadata_uploaded_preserve %}
         <p class="bg-warning">{% blocktrans %}Note: this layer's orginal metadata was populated and preserved by importing a metadata XML file.
@@ -99,8 +99,8 @@
           </div>
         </div>
       </form>
-  </div>
-</div>
+  <!--</div>-->
+<!--</div>-->
 {% endblock %}
 {% block extra_script %}
  {% include 'metadata_form_js.html' %}
