--- a/geonode/templates/metadata_form_js.html
+++ b/geonode/templates/metadata_form_js.html
@@ -5,6 +5,7 @@
 <!--<script src="{% static "lib/js/bootstrap-multiselect.js" %}" type="text/javascript"></script>-->
 <!--<script src="{% static "lib/js/jquery.tree-multiselect.min.js" %}" type="text/javascript"></script>-->
 <script src="{% static "lib/js/fastselect.standalone.min.js" %}" type="text/javascript"></script>
+<script src="{% static "lib/js/waterbubble.min.js" %}" type="text/javascript"></script>
 <script type="text/javascript">
 {% autoescape off %}
     $(function() {
